# macedo-azevedo-api

./: .envsample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  terraform.tfstate
.github/workflows/: django.yml  django_uv.yml  tests.yml
api/: exceptions.py  permissions.py  router.py  tests.py  types.py  urls.py  views.py
api/auth/: urls.py
api/auth/views/: __init__.py  me.py  register.py
api/auth/views/tests/: test_me.py  test_register.py  test_token.py
api/lawyers/: routes.py  tests.py
api/migrations/: 0001_initial.py
api/tests/: test_views.py
api/tests/integration/: test_user_login.py
app/: urls.py
app/auth/: views.py
app/auth/templates/: login.html
app/platform/: urls.py  views.py
authentication/: admin.py  manager.py  models.py  services.py
authentication/migrations/: 0001_initial.py  0002_initial.py
authentication/tests/: factories.py  test_manager.py
common/: models.py  services.py  types.py
common/migrations/: 0001_initial.py
common/tests/: factories.py
core/: settings.py  urls.py
core/settings/: __init__.py  apps.py  auth.py  base.py  database.py  files.py  i18n.py  middlewares.py
core/settings/apps/: apps.py  rest_framework.py
dotenv_files/: .env.compose
global/: base.html
global/auth/: register.html
global/base/: head.html  main.html  navbar.html  scripts.html  sidebar.html
global/platform/: home.html
infra/: docker-compose-dev.yml  docker-compose-prod.yml
infra/dotenv_files/: .env.compose  .env.sample
infra/nginx/: nginx.conf
infra/scripts/: command.sh
infra/terraform/: main.tf
lawfirm/: models.py  services.py
lawfirm/migrations/: 0001_initial.py
lawfirm/tests/: factories.py
lawsuits/migrations/: 0001_initial.py
lawsuits/models/: __init__.py  address.py  commons.py  customer.py  lawsuit.py  phone.py
lawsuits/models/customer/: models.py
lawsuits/models/customer/tests/: factories.py
scripts/: command.sh
src/api/: exceptions.py  permissions.py  urls.py
src/api/account/: urls.py
src/api/account/views/: image_upload.py
src/api/account/views/tests/: test_image_upload.py
src/api/auth/views/: __init__.py  register.py
src/api/auth/views/tests/: test_register.py
src/api/migrations/: 0001_initial.py
src/api/tests/integration/: test_user_login.py
src/app/: urls.py
src/app/auth/: urls.py  views.py
src/app/platform/: views.py
src/authentication/: manager.py  models.py  services.py
src/authentication/migrations/: 0001_initial.py  0002_initial.py
src/authentication/tests/: test_manager.py
src/common/: services.py
src/common/migrations/: 0001_initial.py
src/core/: urls.py
src/core/settings/: __init__.py  auth.py  base.py  files.py
src/core/settings/apps/: __init__.py  rest_framework.py
src/global/: base.html
src/global/auth/: login.html
src/global/base/: footer.html
src/lawfirm/: admin.py  apps.py  models.py  services.py
src/lawfirm/migrations/: 0001_initial.py
src/lawsuits/: apps.py
src/lawsuits/migrations/: 0001_initial.py
src/lawsuits/models/: __init__.py  lawyer.py
src/lawsuits/models/customer/: models.py
utils/: user.py
