[project]
name = "ma-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.2",
    "uvicorn>=0.31.1",
    "python-dotenv>=1.0.1",
    "djangorestframework>=3.15.2",
    "django-filter>=24.3",
    "djangorestframework-simplejwt>=5.3.1",
    "pydantic>=2.9.2",
    "psycopg2-binary>=2.9.10",
    "django-cleanup>=9.0.0",
    "django-storages>=1.14.4",
    "boto3>=1.35.54",
    "django-silk>=5.3.1",
    "django-cors-headers>=4.6.0",
    "gunicorn>=23.0.0",
    "pyright[nodejs]>=1.1.384",
    "django-types>=0.19.1",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.2",
    "factory-boy>=3.3.1",
    "image>=1.5.33",
    "ipdb>=0.13.13",
    "pillow>=10.4.0",
    "pyright>=1.1.384",
    "pytest-django>=4.9.0",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "tblib>=3.0.0",
]

[tool.ruff]

exclude = ["migrations"]
line-length = 100
indent-width = 4

target-version = "py313"

[tool.ruff.lint]


select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["D104", "PGH004"]

fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"


[tool.pyright]
exclude = [".venv", "**/migrations/**", "**/test/**", "**/tests/**"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
reportIncompatibleVariableOverride = false
typeCheckingMode = "basic"
